--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -572,3 +572,12 @@ h1:focus {
     transform: translateY(-5px);
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
 }
+.statusCircle{
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+}
+.statusBadge{
+    padding: 2px 5px;
+    border-radius: 50px;
+}
