--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -16,3 +16,4 @@
 @using Syncfusion.Blazor.Grids
 @using Syncfusion.Blazor.Kanban
 @using Syncfusion.Blazor.Spinner
+@using Syncfusion.Blazor.Popups
